--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600&family=Outfit:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;600;800&family=Outfit:wght@400;600&display=swap" rel="stylesheet">
 
     <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
     <script src="https://kit.fontawesome.com/9027e42d8e.js" crossorigin="anonymous"></script>
